--- a/src/ui-stat-value.less
+++ b/src/ui-stat-value.less
@@ -17,11 +17,16 @@
   color: white;
 }
 
-.title {
+.label {
   font-size: 0.5em;
   color: black;
 }
 
 .change {
   
+}
+
+#trend {
+  width: 100%;
+  height: 3em;
 }
