--- a/src/ui-stat-value.less
+++ b/src/ui-stat-value.less
@@ -4,30 +4,70 @@
 
 :host {
   display: inline-block;
-  padding: 1em;
   margin: 1em;
   border: solid 1px black;
-  background-color: gray;
-  width: 150px;
-  height: 150px;
+  background-color: #1f1f1f;
+  width: 175px;
+  height: 175px;
 }
 
-.value {
-  font-size: 2em;
+.value {  
+  font-size: 2.5em;
   color: white;
+  padding: 0.5em 0em 0em 0em;
+  text-align: center;
+  position: relative;
+  font-weight: 100;
+}
+
+.units {
+  font-size: 0.5em;
+  color: #999;
+  font-weight: 400;  
 }
 
 .label {
+  padding: 1em 0;
+  text-align: center;
+
+  color: #999;
+  text-transform: uppercase;
+  font-weight: 200;
   font-size: 0.5em;
-  color: black;
+  border-bottom: 1px solid #454545;
+  background: #454545;
+  background-image: linear-gradient(#2f2f2f, #303030);
+}
+
+.fraction {
+  font-weight: 200;
+  font-size: 0.7em;
+}
+
+.change {
+  color: white;
+  text-align: center;
+  font-weight: 100;
+  font-size: 2em;
+  position: relative;
+  icon {
+    font-size: 1em;
+    position: relative;
+  }
 }
 
 .increase {
-  color: green;
+  color: green; 
+  icon {
+    top: 8px;
+  }
 }
 
 .decrease {
   color: red;
+  icon {
+    top: -5px;
+  }
 }
 
 #trend {
