--- a/src/ui-stat-value.less
+++ b/src/ui-stat-value.less
@@ -9,6 +9,7 @@
   background-color: #1f1f1f;
   width: 175px;
   height: 175px;
+  font-family: "Helvetica Neue", "Helvetica", Arial;
 }
 
 .value {  
