annotated spark line

--- a/src/ui-stats-number.less
+++ b/src/ui-stats-number.less
@@ -84,6 +84,16 @@
 }
 
 #trend {
-  width: 100%;
+  width: 11em;
   height: 3em;
+}
+
+.annotation {
+  text-align: right;
+  font-size: 0.5em;
+  font-weight: normal;
+  color: @white;
+  padding: 2px;
+  position: relative;
+  top: 2em;
 }
