added loading indicator to charts

--- a/src/ui-stats-chart.less
+++ b/src/ui-stats-chart.less
@@ -22,7 +22,21 @@
   .dark-tint;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
+.hidden {
+  display: none;
+}
+
 #chart {
   width: 100%;
   height: 11em;
+}
+
+.loader {
+  font-size: 0.5em;
+  color: white;
+  padding: 0.5em 0em 0em 0em;
 }
