--- a/src/ui-stats-chart.less
+++ b/src/ui-stats-chart.less
@@ -5,10 +5,10 @@
   display: inline-block;
   margin: 1em;
   .border;
-  .ultra-dark-tint;
   width: 24em;
   height: 12em;
   overflow: hidden;
+  background-color: @white;
 }
 
 .title {
@@ -37,6 +37,6 @@
 
 .loader {
   font-size: 0.5em;
-  color: white;
+  color: @black;
   padding: 0.5em 0em 0em 0em;
 }
