--- a/ui-stats-number.less
+++ b/ui-stats-number.less
@@ -1,5 +1,5 @@
-@import "../node_modules/ui-styles/variables";
-@import "../node_modules/ui-styles/borders";
+@import "node_modules/ui-styles/variables";
+@import "node_modules/ui-styles/borders";
 
 :host {
   display: inline-block;
