--- a/src/ui-stats-timeline.less
+++ b/src/ui-stats-timeline.less
@@ -3,41 +3,49 @@
 }
 
 .timeline {
-  width: 900px;
   display: table;
+  width: 100%;
 }
 
-.data h2 {
+h2 {
   color: #999;
-  font-size: 15px;
+  font-size: 0.9em;
   line-height: 1.1;
   margin: 0 0 6px;
   text-transform: uppercase;
 }
 
-.data .number {
+.number {
   line-height: 0.7;
   color: #333;
-  font-size: 52px;
+  font-size: 3.250em;
+}
+
+h2, .number {
+  font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue", 'Arial Narrow', Arial, sans-serif;
+  font-weight: bold;
+  font-stretch: condensed;
+  -webkit-font-smoothing: antialiased;
 }
 
 .data, .graph {
   display: table-cell;
   vertical-align: top;
-  padding-bottom: 20px;
+  padding-bottom: 1.250em;
 }
 
 .data {
-  padding-right: 20px;
+  padding-right: 1.250em;
   white-space: nowrap;
-  width: 310px;
+  width: 14em;
+  padding-left: 1.250em;
 }
 
 .graph {
 }
 
 google-chart {
-  margin-top: -10px;
-  height: 100px;
+  margin-top: -.725em;
+  height: 7em;
   width: 100%;
 }
