--- a/src/ui-stats-timeline.less
+++ b/src/ui-stats-timeline.less
@@ -21,6 +21,12 @@ h2 {
   font-size: 3.250em;
 }
 
+.loading {
+  line-height: 0.7;
+  color: #ccc;
+  font-size: 0.5em;
+}
+
 h2, .number {
   font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue", 'Arial Narrow', Arial, sans-serif;
   font-weight: bold;
