tweak layout, support 'none' function

--- a/src/ui-stats-timeline.less
+++ b/src/ui-stats-timeline.less
@@ -11,18 +11,18 @@ h2 {
   color: #999;
   font-size: 0.9em;
   line-height: 1.1;
-  margin: 0 0 6px;
+  margin: 0 0 -2px;
   text-transform: uppercase;
 }
 
 .number {
-  line-height: 0.7;
+  //line-height: 0.7;
   color: #333;
   font-size: 3.250em;
 }
 
 .loading {
-  line-height: 0.7;
+  //line-height: 0.7;
   color: #ccc;
   font-size: 0.5em;
 }
@@ -41,17 +41,27 @@ h2, .number {
 }
 
 .data {
-  padding-right: 1.250em;
+  padding-right: 0.250em;
   white-space: nowrap;
   width: 14em;
   padding-left: 1.250em;
+  //background-color: yellow;
 }
 
 .graph {
+  //background-color: pink;
+  padding: 0;
+  margin: 0;
 }
 
 google-chart {
-  margin-top: -.725em;
-  height: 7em;
+  //padding-left: 0;
+  //margin-left: -3em;
+  //padding: 0;
+  //margin: 0;
+  height: 6em;
   width: 100%;
+}
+
+.graph-container {
 }
