now shows change indicators
you can disable by setting showChange to false

--- a/src/ui-stats-timeline.less
+++ b/src/ui-stats-timeline.less
@@ -22,6 +22,19 @@ h2 {
   font-size: 3.250em;
 }
 
+.change {
+  color: #999;
+  font-size: 0.7em;
+}
+
+.increase {
+  color: darkgreen;
+}
+
+.decrease {
+  color: red;
+}
+
 .loading {
   //line-height: 0.7;
   color: #ccc;
