--- a/src/ui-stats-timeline.less
+++ b/src/ui-stats-timeline.less
@@ -24,7 +24,8 @@ h2 {
 
 .change {
   color: #999;
-  font-size: 0.7em;
+  font-size: 0.8em;
+  font-weight: normal;
 }
 
 .increase {
@@ -41,7 +42,7 @@ h2 {
   font-size: 0.5em;
 }
 
-h2, .number {
+h2, .number, .change {
   font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue", 'Arial Narrow', Arial, sans-serif;
   font-weight: bold;
   font-stretch: condensed;
