--- a/src/ui-stats-timeline.less
+++ b/src/ui-stats-timeline.less
@@ -22,20 +22,6 @@ h2 {
   font-size: 3.250em;
 }
 
-.change {
-  color: #999;
-  font-size: 0.8em;
-  font-weight: normal;
-}
-
-.increase {
-  color: darkgreen;
-}
-
-.decrease {
-  color: red;
-}
-
 .loading {
   //line-height: 0.7;
   color: #ccc;
@@ -47,6 +33,20 @@ h2, .number, .change {
   font-weight: bold;
   font-stretch: condensed;
   -webkit-font-smoothing: antialiased;
+}
+
+.change {
+  font-family: "HelveticaNeue-Condensed", "Helvetica Neue", 'Arial Narrow', Arial, sans-serif;
+  font-size: 0.8em;
+  font-weight: normal;
+}
+
+.increase {
+  color: darkgreen;
+}
+
+.decrease {
+  color: red;
 }
 
 .data, .graph {
