include overall change metrics

--- a/src/ui-stats-timeline.less
+++ b/src/ui-stats-timeline.less
@@ -17,9 +17,9 @@ h2 {
 }
 
 .number {
-  //line-height: 0.7;
+  line-height: 0.95;
   color: #333;
-  font-size: 3.250em;
+  font-size: 3em;
 }
 
 .loading {
@@ -37,7 +37,7 @@ h2, .number, .change {
 
 .change {
   font-family: "HelveticaNeue-Condensed", "Helvetica Neue", 'Arial Narrow', Arial, sans-serif;
-  font-size: 0.8em;
+  font-size: 0.7em;
   font-weight: normal;
 }
 
