tweak change layout a bit

--- a/src/ui-stats-timeline.less
+++ b/src/ui-stats-timeline.less
@@ -8,6 +8,13 @@
   width: 100%;
 }
 
+h2, .number, .change {
+  font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue", 'Arial Narrow', Arial, sans-serif;
+  font-weight: bold;
+  font-stretch: condensed;
+  -webkit-font-smoothing: antialiased;
+}
+
 h2 {
   color: #999;
   font-size: 0.9em;
@@ -17,28 +24,23 @@ h2 {
 }
 
 .number {
-  line-height: 0.95;
+  line-height: 1.0;
   color: #333;
   font-size: 3em;
+  padding-bottom: 0.1em;
 }
 
 .loading {
-  //line-height: 0.7;
+  line-height: 1.5;
   color: #ccc;
   font-size: 0.5em;
-}
-
-h2, .number, .change {
-  font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue", 'Arial Narrow', Arial, sans-serif;
-  font-weight: bold;
-  font-stretch: condensed;
-  -webkit-font-smoothing: antialiased;
 }
 
 .change {
   font-family: "HelveticaNeue-Condensed", "Helvetica Neue", 'Arial Narrow', Arial, sans-serif;
   font-size: 0.7em;
   font-weight: normal;
+  padding-left: 0.7em;
 }
 
 .increase {
