--- a/src/ui-stats-timeline.less
+++ b/src/ui-stats-timeline.less
@@ -38,9 +38,13 @@ h2 {
 
 .change {
   font-family: "HelveticaNeue-Condensed", "Helvetica Neue", 'Arial Narrow', Arial, sans-serif;
-  font-size: 0.7em;
+  font-size: 1em;
   font-weight: normal;
-  padding-left: 0.7em;
+  padding-left: 0em;
+}
+
+.units {
+  font-size: 0.5em;
 }
 
 .increase {
