body tag for description

--- a/src/ui-stats-timeline.less
+++ b/src/ui-stats-timeline.less
@@ -23,6 +23,12 @@ h2 {
   text-transform: uppercase;
 }
 
+.comment {
+  font-size: smaller;
+  -webkit-font-smoothing: antialiased;
+  color: #666;  
+}
+
 .number {
   line-height: 1.0;
   color: #333;
