--- a/src/ui-stats-timeline.less
+++ b/src/ui-stats-timeline.less
@@ -26,7 +26,8 @@ h2 {
 .comment {
   font-size: smaller;
   -webkit-font-smoothing: antialiased;
-  color: #666;  
+  color: #666;
+  line-height: normal;
 }
 
 .number {
